--- a/_talks/2021-06-24-talk.md
+++ b/_talks/2021-06-24-talk.md
@@ -5,7 +5,6 @@ type: "Talk"
 permalink: /talks/2021-06-24-talk
 venue: "Bilim Akademisi & VERIM"
 date: 2021-06-24
-location: "Istanbul turkey (online)"
+location: "Istanbul, Turkey (online)"
 ---
-
 
