Working on talks.

--- a/_talks/2021-06-24-talk.md
+++ b/_talks/2021-06-24-talk.md
@@ -1,5 +1,5 @@
 ---
-title: "Interpretability in Machine Learning (in Turkish)"
+title: "Yapay Öğrenmede Yorumlanabilirlik"
 collection: talks
 type: "Talk"
 permalink: /talks/2021-06-24-talk
@@ -8,3 +8,4 @@ date: 2021-06-24
 location: "Istanbul, Turkey (online)"
 ---
 
+This will be a short lecture on interpretability in machine learning during [Machine Learning Summer School](https://yazokulu.bilimakademisi.org/yapayogrenme/2021/).
