Working on talks.

--- a/_talks/2020-01-31-talk.md
+++ b/_talks/2020-01-31-talk.md
@@ -8,5 +8,5 @@ date: 2020-01-31
 location: "Istanbul, Turkey"
 ---
 
-[**YouTube recording**](https://www.youtube.com/watch?v=vbaCczyk_SA)
+[YouTube recording](https://www.youtube.com/watch?v=vbaCczyk_SA)
 
