--- a/_talks/2021-01-01-talk.md
+++ b/_talks/2021-01-01-talk.md
@@ -8,6 +8,4 @@ date: 2021-06-24
 location: "(online)"
 ---
 
-**Abstract:** This talk consists of two parts. In the first part, we give a brief overview of rule-based learning algorithms using optimization and discuss each algorithm in terms of its prediction accuracy and interpretability. The second part of the talk is reserved for our recent work on a new rule learning algorithm. Our approach starts with modeling the learning process as a linear program, where the columns correspond to rules. Then we apply a column generation procedure to produce a set of rules. We discuss the difficulty of the proposed rule generation scheme and present a generic framework that can efficiently overcome this difficulty. With our approach, we observe that rule structure can be fine-tuned so that both accuracy and interpretability are considered simultaneously. Our suggested algorithm is capable of handling both classification and regression instances, and achieves accurate and interpretable results on various datasets from the literature.
-
-[**YouTube recording**](https://www.youtube.com/watch?v=ekcQEYd9C88)
+[YouTube recording](https://www.youtube.com/watch?v=ekcQEYd9C88)
