Working on talks.

--- a/_talks/2021-03-13-talk.md
+++ b/_talks/2021-03-13-talk.md
@@ -8,8 +8,4 @@ date: 2021-03-13
 location: "(online)"
 ---
 
-[Event page](https://indico.truba.gov.tr/event/23/)
-
-[YouTube recording](https://www.youtube.com/watch?v=b-kjs6iD9Ic)
-
-[Slides](https://indico.truba.gov.tr/event/23/attachments/67/176/%C4%B0lker_Birbil.pdf)
+[Event page](https://indico.truba.gov.tr/event/23/) [YouTube recording](https://www.youtube.com/watch?v=b-kjs6iD9Ic) [Slides](https://indico.truba.gov.tr/event/23/attachments/67/176/%C4%B0lker_Birbil.pdf)
