Added the VBYO presentation.

--- a/_talks/2021-06-24-talk.md
+++ b/_talks/2021-06-24-talk.md
@@ -8,4 +8,4 @@ date: 2021-06-24
 location: "Istanbul, Turkey (online)"
 ---
 
-This will be a short lecture on interpretability in machine learning during [Machine Learning Summer School](https://yazokulu.bilimakademisi.org/yapayogrenme/2021/).
+[Machine Learning Summer School](https://yazokulu.bilimakademisi.org/yapayogrenme/2021/) [YouTube recording](https://youtu.be/bA80kIJJx18?t=11623) [Slides](./files/presentations/VBYO_Birbil_PrintOut.pdf)
