Changed the format for the talks.

--- a/_talks/2016-09-08-talk.md
+++ b/_talks/2016-09-08-talk.md
@@ -8,4 +8,5 @@ date: 2016-09-08
 location: "(online)"
 ---
 
-[YouTube recording - I](https://www.youtube.com/watch?v=BOYXpuxqtYE) [YouTube recording - II](https://www.youtube.com/watch?v=I535Ux0snHA)
+- [YouTube recording - I](https://www.youtube.com/watch?v=BOYXpuxqtYE)
+- [YouTube recording - II](https://www.youtube.com/watch?v=I535Ux0snHA)
