--- a/_talks/2018-05-06-talk.md
+++ b/_talks/2018-05-06-talk.md
@@ -8,4 +8,4 @@ date: 2018-05-06
 location: "(online)"
 ---
 
-[YouTube recording](https://www.youtube.com/watch?v=RJGEbbmWf1c)
+- [YouTube recording](https://www.youtube.com/watch?v=RJGEbbmWf1c)
