--- a/_talks/2018-09-18-talk.md
+++ b/_talks/2018-09-18-talk.md
@@ -8,5 +8,5 @@ date: 2018-09-18
 location: "(online)"
 ---
 
-[YouTube recording](https://www.youtube.com/watch?v=wpiU0l4zbIg)
+- [YouTube recording](https://www.youtube.com/watch?v=wpiU0l4zbIg)
 
