--- a/_talks/2020-05-03-talk.md
+++ b/_talks/2020-05-03-talk.md
@@ -8,4 +8,4 @@ date: 2020-05-03
 location: "(online)"
 ---
 
-[Event page](https://ut.iku.edu.tr/tr/haberler/veri-bilimi-ve-makine-ogrenmesi-e-semineri) 
+- [Event page](https://ut.iku.edu.tr/tr/haberler/veri-bilimi-ve-makine-ogrenmesi-e-semineri) 
