--- a/_talks/2020-07-06-talk.md
+++ b/_talks/2020-07-06-talk.md
@@ -8,5 +8,5 @@ date: 2020-07-06
 location: "(online)"
 ---
 
-[YouTube recording](https://www.youtube.com/watch?v=hdytbp601mc)
+- [YouTube recording](https://www.youtube.com/watch?v=hdytbp601mc)
 
