--- a/_talks/2021-02-19-talk.md
+++ b/_talks/2021-02-19-talk.md
@@ -8,4 +8,4 @@ date: 2021-02-19
 location: "(online)"
 ---
 
-[Event page](https://www.meetup.com/tr-TR/Eskisehir-R-Users-Group-Data-Science-Society/events/276309629/) 
+- [Event page](https://www.meetup.com/tr-TR/Eskisehir-R-Users-Group-Data-Science-Society/events/276309629/) 
