--- a/_talks/2017-11-14-talk.md
+++ b/_talks/2017-11-14-talk.md
@@ -8,4 +8,4 @@ date: 2017-11-14
 location: "(online)"
 ---
 
-[YouTube recording](https://www.youtube.com/watch?v=Q_mfu-szoOI)
+- [YouTube recording](https://www.youtube.com/watch?v=Q_mfu-szoOI)
