--- a/_talks/2019-05-14-talk.md
+++ b/_talks/2019-05-14-talk.md
@@ -8,4 +8,4 @@ date: 2019-05-14
 location: "(online)"
 ---
 
-[YouTube recording](https://www.youtube.com/watch?v=G4qtmDmzMoE)
+- [YouTube recording](https://www.youtube.com/watch?v=G4qtmDmzMoE)
