--- a/_talks/2021-01-01-talk.md
+++ b/_talks/2021-01-01-talk.md
@@ -8,4 +8,4 @@ date: 2021-06-24
 location: "(online)"
 ---
 
-[YouTube recording](https://www.youtube.com/watch?v=ekcQEYd9C88)
+- [YouTube recording](https://www.youtube.com/watch?v=ekcQEYd9C88)
