--- a/_talks/2021-06-24-talk.md
+++ b/_talks/2021-06-24-talk.md
@@ -9,5 +9,5 @@ location: "Istanbul, Turkey (online)"
 ---
 
 - [Machine Learning Summer School](https://yazokulu.bilimakademisi.org/yapayogrenme/2021/)
-- [YouTube recording](https://youtu.be/bA80kIJJx18?t=11623)
+- [YouTube recording](https://www.youtube.com/watch?v=83HHZ5INDx0)
 - [Slides](./files/presentations/VBYO_Birbil_PrintOut.pdf)
