--- a/_talks/2021-06-24-talk.md
+++ b/_talks/2021-06-24-talk.md
@@ -10,4 +10,4 @@ location: "Istanbul, Turkey (online)"
 
 - [Machine Learning Summer School](https://yazokulu.bilimakademisi.org/yapayogrenme/2021/)
 - [YouTube recording](https://www.youtube.com/watch?v=83HHZ5INDx0)
-- [Slides](./files/presentations/VBYO_Birbil_PrintOut.pdf)
+- [Slides](https://yazokulu.bilimakademisi.org/yapayogrenme/2021/slides/Birbil.BAYOYO2021.pdf)
